force-app/main/default/objects/MOU__c/MOU__c.object-meta.xml
<CustomObject>
    <label>MOU</label>
    <nameField>
        <label>MOU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MOUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>