force-app/main/default/objects/MOU__c/fields/Approved_Units__c.field-meta.xml
<CustomField>
    <fullName>Approved_Units__c</fullName>
    <label>Approved Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>