force-app/main/default/objects/MOU__c/fields/checklist__c.field-meta.xml
<CustomField>
    <fullName>checklist__c</fullName>
    <label>checklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a,</fullName>
            </value>
            <value>
                <fullName>b,</fullName>
            </value>
            <value>
                <fullName>c,</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>