force-app/main/default/objects/MOU__c/fields/TestMOU__c.field-meta.xml
<CustomField>
    <fullName>TestMOU__c</fullName>
    <label>TestMOU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1,</fullName>
            </value>
            <value>
                <fullName>2,</fullName>
            </value>
            <value>
                <fullName>3,</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>