force-app/main/default/objects/MOU__c/recordTypes/MOU_RT.recordType-meta.xml
<RecordType>
    <fullName>MOU_RT</fullName>
    <active>true</active>
    <description>MOU_RT</description>
    <label>MOU_RT</label>
</RecordType>